src/coomsuite/utils/coom_grammar/model/ModelParser.py
# Generated from /home/ruehling/projects/coom-suite-fork/src/coomsuite/utils/coom_grammar/model/Model.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ModelParser ( Parser ):

    grammarFileName = "Model.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'product'", "'{'", "'}'", "'structure'",
                     "'enumeration'", "'static'", "'reference'", "'/'",
                     "'..'", "'*'", "'attribute'", "'='", "'('", "','",
                     "')'", "'num'", "'-'", "'string'", "'/n'", "'.'", "'^'",
                     "'define'", "'alldiff'", "'exists'", "'in'", "'explanation'",
                     "'combinations'", "'allow'", "'forbid'", "'-*-'", "'minimize'",
                     "'maximize'", "'readwrite'", "'readonly'", "'hide'",
                     "'message'", "'debug'", "'info'", "'warn'", "'error'",
                     "'explain'", "'prefer'", "'||'", "'&&'", "'!'", "'+'",
                     "'for'", "'if'", "'true'", "'false'", "'\\u221E'",
                     "'['", "']'", "'last'", "';'", "'<'", "'<='", "'\\u2264'",
                     "'>'", "'>='", "'\\u2265'", "'=='", "'!='", "'\\u2260'",
                     "'\\u2287'", "'contains'", "<INVALID>", "<INVALID>",
                     "'behavior'", "'condition'", "'imply'", "'require'",
                     "'default'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "FUNCTION",
                      "TRIGONOMETRIC", "BEHAVIOR", "CONDITION", "IMPLY",
                      "REQUIRE", "DEFAULT", "KEYWORD", "NAME", "INTEGER",
                      "FLOATING", "TIMES", "HASHES", "NEWLINE", "WHITESPACE",
                      "COMMENT", "MULTILINE_COMMENT" ]

    RULE_root = 0
    RULE_product = 1
    RULE_structure = 2
    RULE_enumeration = 3
    RULE_feature = 4
    RULE_cardinality = 5
    RULE_attribute = 6
    RULE_option = 7
    RULE_field = 8
    RULE_number_def = 9
    RULE_string_def = 10
    RULE_unit = 11
    RULE_fraction = 12
    RULE_behavior = 13
    RULE_behavior_block = 14
    RULE_define = 15
    RULE_conditioned = 16
    RULE_alldiff = 17
    RULE_exists = 18
    RULE_explanation = 19
    RULE_precondition = 20
    RULE_date = 21
    RULE_combinations = 22
    RULE_combination_row = 23
    RULE_combination_item = 24
    RULE_combination_atom = 25
    RULE_assign_default = 26
    RULE_assign_imply = 27
    RULE_optimize = 28
    RULE_interaction = 29
    RULE_message = 30
    RULE_require = 31
    RULE_prefer = 32
    RULE_condition = 33
    RULE_condition_or = 34
    RULE_condition_and = 35
    RULE_condition_not = 36
    RULE_condition_compare = 37
    RULE_condition_part = 38
    RULE_formula = 39
    RULE_formula_add = 40
    RULE_formula_sub = 41
    RULE_formula_mul = 42
    RULE_formula_div = 43
    RULE_formula_pow = 44
    RULE_formula_sign = 45
    RULE_formula_func = 46
    RULE_formula_atom = 47
    RULE_constant = 48
    RULE_floating = 49
    RULE_path = 50
    RULE_path_item = 51
    RULE_path_index = 52
    RULE_name = 53
    RULE_stmt_end = 54
    RULE_compare = 55

    ruleNames =  [ "root", "product", "structure", "enumeration", "feature",
                   "cardinality", "attribute", "option", "field", "number_def",
                   "string_def", "unit", "fraction", "behavior", "behavior_block",
                   "define", "conditioned", "alldiff", "exists", "explanation",
                   "precondition", "date", "combinations", "combination_row",
                   "combination_item", "combination_atom", "assign_default",
                   "assign_imply", "optimize", "interaction", "message",
                   "require", "prefer", "condition", "condition_or", "condition_and",
                   "condition_not", "condition_compare", "condition_part",
                   "formula", "formula_add", "formula_sub", "formula_mul",
                   "formula_div", "formula_pow", "formula_sign", "formula_func",
                   "formula_atom", "constant", "floating", "path", "path_item",
                   "path_index", "name", "stmt_end", "compare" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    FUNCTION=67
    TRIGONOMETRIC=68
    BEHAVIOR=69
    CONDITION=70
    IMPLY=71
    REQUIRE=72
    DEFAULT=73
    KEYWORD=74
    NAME=75
    INTEGER=76
    FLOATING=77
    TIMES=78
    HASHES=79
    NEWLINE=80
    WHITESPACE=81
    COMMENT=82
    MULTILINE_COMMENT=83

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    def wasNewline(self):
        for index in reversed(range(self.getCurrentToken().tokenIndex)):
            # stop on default channel
            token = self.getTokenStream().get(index)
            if token.channel == 0:
                break

            # if the token is blank and contains newline, we found it
            if len(token.text) == 0:
                continue
            if token.text.startswith("\n") or token.text.startswith("\r"):
                return True

        return False



    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ModelParser.EOF, 0)

        def product(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.ProductContext)
            else:
                return self.getTypedRuleContext(ModelParser.ProductContext,i)


        def structure(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.StructureContext)
            else:
                return self.getTypedRuleContext(ModelParser.StructureContext,i)


        def enumeration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.EnumerationContext)
            else:
                return self.getTypedRuleContext(ModelParser.EnumerationContext,i)


        def behavior(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.BehaviorContext)
            else:
                return self.getTypedRuleContext(ModelParser.BehaviorContext,i)


        def getRuleIndex(self):
            return ModelParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = ModelParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 50) != 0) or _la==69:
                self.state = 116
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 112
                    self.product()
                    pass
                elif token in [4]:
                    self.state = 113
                    self.structure()
                    pass
                elif token in [5]:
                    self.state = 114
                    self.enumeration()
                    pass
                elif token in [69]:
                    self.state = 115
                    self.behavior()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.match(ModelParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProductContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.FeatureContext)
            else:
                return self.getTypedRuleContext(ModelParser.FeatureContext,i)


        def stmt_end(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.Stmt_endContext)
            else:
                return self.getTypedRuleContext(ModelParser.Stmt_endContext,i)


        def getRuleIndex(self):
            return ModelParser.RULE_product

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProduct" ):
                listener.enterProduct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProduct" ):
                listener.exitProduct(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProduct" ):
                return visitor.visitProduct(self)
            else:
                return visitor.visitChildren(self)




    def product(self):

        localctx = ModelParser.ProductContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_product)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(ModelParser.T__0)
            self.state = 124
            self.match(ModelParser.T__1)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 327872) != 0) or ((((_la - 67)) & ~0x3f) == 0 and ((1 << (_la - 67)) & 2945) != 0):
                self.state = 125
                self.feature()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 36028797019291840) != 0) or ((((_la - 67)) & ~0x3f) == 0 and ((1 << (_la - 67)) & 2945) != 0):
                    self.state = 126
                    self.stmt_end()
                    self.state = 127
                    self.feature()
                    self.state = 133
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 136
            self.match(ModelParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(ModelParser.NameContext,0)


        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.FeatureContext)
            else:
                return self.getTypedRuleContext(ModelParser.FeatureContext,i)


        def stmt_end(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.Stmt_endContext)
            else:
                return self.getTypedRuleContext(ModelParser.Stmt_endContext,i)


        def getRuleIndex(self):
            return ModelParser.RULE_structure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructure" ):
                listener.enterStructure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructure" ):
                listener.exitStructure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructure" ):
                return visitor.visitStructure(self)
            else:
                return visitor.visitChildren(self)




    def structure(self):

        localctx = ModelParser.StructureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_structure)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(ModelParser.T__3)
            self.state = 139
            self.name()
            self.state = 140
            self.match(ModelParser.T__1)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 327872) != 0) or ((((_la - 67)) & ~0x3f) == 0 and ((1 << (_la - 67)) & 2945) != 0):
                self.state = 141
                self.feature()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 36028797019291840) != 0) or ((((_la - 67)) & ~0x3f) == 0 and ((1 << (_la - 67)) & 2945) != 0):
                    self.state = 142
                    self.stmt_end()
                    self.state = 143
                    self.feature()
                    self.state = 149
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 152
            self.match(ModelParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumerationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(ModelParser.NameContext,0)


        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.AttributeContext)
            else:
                return self.getTypedRuleContext(ModelParser.AttributeContext,i)


        def option(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.OptionContext)
            else:
                return self.getTypedRuleContext(ModelParser.OptionContext,i)


        def stmt_end(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.Stmt_endContext)
            else:
                return self.getTypedRuleContext(ModelParser.Stmt_endContext,i)


        def getRuleIndex(self):
            return ModelParser.RULE_enumeration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumeration" ):
                listener.enterEnumeration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumeration" ):
                listener.exitEnumeration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumeration" ):
                return visitor.visitEnumeration(self)
            else:
                return visitor.visitChildren(self)




    def enumeration(self):

        localctx = ModelParser.EnumerationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_enumeration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(ModelParser.T__4)
            self.state = 155
            self.name()
            self.state = 156
            self.match(ModelParser.T__1)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11 or ((((_la - 67)) & ~0x3f) == 0 and ((1 << (_la - 67)) & 385) != 0):
                self.state = 159
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [11]:
                    self.state = 157
                    self.attribute()
                    pass
                elif token in [67, 74, 75]:
                    self.state = 158
                    self.option()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==11 or _la==55 or ((((_la - 67)) & ~0x3f) == 0 and ((1 << (_la - 67)) & 385) != 0):
                    self.state = 161
                    self.stmt_end()
                    self.state = 164
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [11]:
                        self.state = 162
                        self.attribute()
                        pass
                    elif token in [67, 74, 75]:
                        self.state = 163
                        self.option()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 170
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 173
            self.match(ModelParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.static = None # Token
            self.ref = None # Token
            self.priority = None # Token

        def field(self):
            return self.getTypedRuleContext(ModelParser.FieldContext,0)


        def cardinality(self):
            return self.getTypedRuleContext(ModelParser.CardinalityContext,0)


        def INTEGER(self):
            return self.getToken(ModelParser.INTEGER, 0)

        def getRuleIndex(self):
            return ModelParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeature" ):
                return visitor.visitFeature(self)
            else:
                return visitor.visitChildren(self)




    def feature(self):

        localctx = ModelParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 175
                localctx.static = self.match(ModelParser.T__5)


            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 178
                localctx.ref = self.match(ModelParser.T__6)


            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==76 or _la==78:
                self.state = 181
                self.cardinality()


            self.state = 184
            self.field()
            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 185
                self.match(ModelParser.T__7)
                self.state = 186
                localctx.priority = self.match(ModelParser.INTEGER)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CardinalityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.min_ = None # Token
            self.range_ = None # Token
            self.max_ = None # Token

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(ModelParser.INTEGER)
            else:
                return self.getToken(ModelParser.INTEGER, i)

        def TIMES(self, i:int=None):
            if i is None:
                return self.getTokens(ModelParser.TIMES)
            else:
                return self.getToken(ModelParser.TIMES, i)

        def getRuleIndex(self):
            return ModelParser.RULE_cardinality

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCardinality" ):
                listener.enterCardinality(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCardinality" ):
                listener.exitCardinality(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCardinality" ):
                return visitor.visitCardinality(self)
            else:
                return visitor.visitChildren(self)




    def cardinality(self):

        localctx = ModelParser.CardinalityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cardinality)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            localctx.min_ = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==76 or _la==78):
                localctx.min_ = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 190
                localctx.range_ = self.match(ModelParser.T__8)
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10 or _la==76 or _la==78:
                    self.state = 191
                    localctx.max_ = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(_la==10 or _la==76 or _la==78):
                        localctx.max_ = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field(self):
            return self.getTypedRuleContext(ModelParser.FieldContext,0)


        def getRuleIndex(self):
            return ModelParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = ModelParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(ModelParser.T__10)
            self.state = 197
            self.field()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(ModelParser.NameContext,0)


        def constant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.ConstantContext)
            else:
                return self.getTypedRuleContext(ModelParser.ConstantContext,i)


        def getRuleIndex(self):
            return ModelParser.RULE_option

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOption" ):
                listener.enterOption(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOption" ):
                listener.exitOption(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOption" ):
                return visitor.visitOption(self)
            else:
                return visitor.visitChildren(self)




    def option(self):

        localctx = ModelParser.OptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_option)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.name()
            self.state = 214
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 200
                self.match(ModelParser.T__11)
                self.state = 201
                self.match(ModelParser.T__12)
                self.state = 202
                self.constant()
                self.state = 209
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((((_la - 14)) & ~0x3f) == 0 and ((1 << (_la - 14)) & -1143914064833937399) != 0):
                    self.state = 204
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==14:
                        self.state = 203
                        self.match(ModelParser.T__13)


                    self.state = 206
                    self.constant()
                    self.state = 211
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 212
                self.match(ModelParser.T__14)

